# MVP

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  TECHNICAL_SPEC.md  build_exe.bat  build_exe.sh  docker-compose.yml  pyproject.toml  requirements.txt  studyassist.spec  ЗАПУСК.bat  ИНСТРУКЦИЯ.txt  УСТАНОВКА.bat
app/: api.py  config.py  gui.py  launcher.py  main.py  pipeline.py
app/collectors/: base.py  search_templates.py
app/collectors/sources/: forums.py  mock_seed.py  russian_web.py  tg_catalog.py  tg_channel.py  vk_public.py
app/db/: base.py  models.py  schema.sql  seed.sql
app/integrations/: airtable.py  base_client.py  google_sheets.py  notion.py  telegram_notify.py
app/observability/: metrics.py  sentry.py
app/processing/: classify_rules.py  dedupe.py  normalize.py  scoring.py
app/tasks/: creator.py  templates.py
scripts/: export_csv.py  run_discovery.sh  run_gui.bat  run_trigger_scan.bat  run_trigger_scan.sh
tests/: conftest.py  test_processing.py  test_tasks.py
